--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Immersio Chat</title>
   </head>
-  <body style="background: black; color: white">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
