--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     
     <title>Immersio Chat</title>
   </head>
-  <body>
+  <body style="background: #E5E5E5">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="background: #E5E5E5"></div>
     <!--
